test/Fail/Issue4525b.agda
{-# OPTIONS --erasure #-}

data ⊥ : Set where

_ : @0 ⊥ → Set
_ = λ @0 { () }
