test/Fail/Issue4525b.err
Issue4525b.agda:6.5-14: error: [GenericError]
Erased pattern-matching lambdas may only be used in erased contexts
when checking that the expression λ @0 { () } has type @0 ⊥ → Set
